--- a/package.json
+++ b/package.json
@@ -13,14 +13,38 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "i18next": "^22.0.5",
+    "react-i18next": "^12.0.0",
+    "react-icons": "^4.6.0",
+    "styled-components": "^5.3.6",
+    "bootstrap": "^5.2.2",
+    "react-bootstrap": "^2.5.0",
+    "polished": "^4.2.2",
+    "react-hook-form": "^7.38.0",
+    "react-toastify": "^9.1.1",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-is": ">= 16.8.0"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.26",
+    "@types/fancybox": "^3.5.3",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
     "@vitejs/plugin-react": "^2.2.0",
+    "eslint": "^8.26.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.4.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.31.10",
+    "prettier": "^2.7.1",
     "gh-pages": "^4.0.0",
     "typescript": "^4.6.4",
-    "vite": "^3.2.3"
+    "vite": "^3.2.3",
+    "vite-aliases": "^0.9.7"
   }
 }
