--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bootstrap": "^5.2.2",
     "feather-icons-react": "^0.6.2",
+    "framer-motion": "^7.6.7",
     "i18next": "^22.0.5",
     "polished": "^4.2.2",
     "react": "^18.2.0",
