--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-copy-code": "^2.1.2",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.38.0",
